# typist

./: Cargo.toml
src/: layout.rs  lib.rs  optimization.rs
